library/src/libqgraphicsitem.h

typedef struct QAbstractGraphicsShapeItem QAbstractGraphicsShapeItem;
typedef struct QBrush QBrush;
typedef struct QEvent QEvent;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsObject QGraphicsObject;
typedef struct QGraphicsPathItem QGraphicsPathItem;
typedef struct QGraphicsRectItem QGraphicsRectItem;
typedef struct QMetaObject QMetaObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPen QPen;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QSize QSize;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
void QGraphicsItem_SetExtension(QGraphicsItem* self, int extension, QVariant* variant);
QVariant* QGraphicsItem_Extension(const QGraphicsItem* self, QVariant* variant);
void QGraphicsItem_SetFlag2(QGraphicsItem* self, int flag, bool enabled);
void QGraphicsItem_SetCacheMode2(QGraphicsItem* self, int mode, QSize* cacheSize);
void QGraphicsItem_SetFocus1(QGraphicsItem* self, int focusReason);
void QGraphicsItem_EnsureVisible1(QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_EnsureVisible22(QGraphicsItem* self, QRectF* rect, int xmargin);
void QGraphicsItem_EnsureVisible3(QGraphicsItem* self, QRectF* rect, int xmargin, int ymargin);
void QGraphicsItem_EnsureVisible5(QGraphicsItem* self, double x, double y, double w, double h, int xmargin);
void QGraphicsItem_EnsureVisible6(QGraphicsItem* self, double x, double y, double w, double h, int xmargin, int ymargin);
QTransform* QGraphicsItem_ItemTransform2(const QGraphicsItem* self, QGraphicsItem* other, bool* ok);
void QGraphicsItem_SetTransform2(QGraphicsItem* self, QTransform* matrix, bool combine);
libqt_list /* of QGraphicsItem* */ QGraphicsItem_CollidingItems1(const QGraphicsItem* self, int mode);
bool QGraphicsItem_IsObscured1(const QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_Update1(QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_Scroll3(QGraphicsItem* self, double dx, double dy, QRectF* rect);
void QGraphicsItem_AddToIndex(QGraphicsItem* self);
void QGraphicsItem_RemoveFromIndex(QGraphicsItem* self);
void QGraphicsItem_PrepareGeometryChange(QGraphicsItem* self);
QGraphicsObject* QGraphicsObject_new();
QGraphicsObject* QGraphicsObject_new2(QGraphicsItem* parent);
QMetaObject* QGraphicsObject_MetaObject(const QGraphicsObject* self);
void* QGraphicsObject_Metacast(QGraphicsObject* self, const char* param1);
int QGraphicsObject_Metacall(QGraphicsObject* self, int param1, int param2, void** param3);
libqt_string QGraphicsObject_Tr(const char* s);
void QGraphicsObject_GrabGesture(QGraphicsObject* self, int typeVal);
void QGraphicsObject_UngrabGesture(QGraphicsObject* self, int typeVal);
void QGraphicsObject_ParentChanged(QGraphicsObject* self);
void QGraphicsObject_OpacityChanged(QGraphicsObject* self);
void QGraphicsObject_VisibleChanged(QGraphicsObject* self);
void QGraphicsObject_EnabledChanged(QGraphicsObject* self);
void QGraphicsObject_XChanged(QGraphicsObject* self);
void QGraphicsObject_YChanged(QGraphicsObject* self);
void QGraphicsObject_ZChanged(QGraphicsObject* self);
void QGraphicsObject_RotationChanged(QGraphicsObject* self);
void QGraphicsObject_ScaleChanged(QGraphicsObject* self);
void QGraphicsObject_ChildrenChanged(QGraphicsObject* self);
void QGraphicsObject_WidthChanged(QGraphicsObject* self);
void QGraphicsObject_HeightChanged(QGraphicsObject* self);
bool QGraphicsObject_Event(QGraphicsObject* self, QEvent* ev);
libqt_string QGraphicsObject_Tr2(const char* s, const char* c);
libqt_string QGraphicsObject_Tr3(const char* s, const char* c, int n);
void QGraphicsObject_GrabGesture2(QGraphicsObject* self, int typeVal, int flags);
void QGraphicsObject_UpdateMicroFocus(QGraphicsObject* self);
QAbstractGraphicsShapeItem* QAbstractGraphicsShapeItem_new();
QAbstractGraphicsShapeItem* QAbstractGraphicsShapeItem_new2(QGraphicsItem* parent);
QPen* QAbstractGraphicsShapeItem_Pen(const QAbstractGraphicsShapeItem* self);
void QAbstractGraphicsShapeItem_SetPen(QAbstractGraphicsShapeItem* self, QPen* pen);
QBrush* QAbstractGraphicsShapeItem_Brush(const QAbstractGraphicsShapeItem* self);
void QAbstractGraphicsShapeItem_SetBrush(QAbstractGraphicsShapeItem* self, QBrush* brush);
bool QAbstractGraphicsShapeItem_IsObscuredBy(const QAbstractGraphicsShapeItem* self, QGraphicsItem* item);
QPainterPath* QAbstractGraphicsShapeItem_OpaqueArea(const QAbstractGraphicsShapeItem* self);
QGraphicsPathItem* QGraphicsPathItem_new();
QGraphicsPathItem* QGraphicsPathItem_new2(QPainterPath* path);
QGraphicsPathItem* QGraphicsPathItem_new3(QGraphicsItem* parent);
QGraphicsPathItem* QGraphicsPathItem_new4(QPainterPath* path, QGraphicsItem* parent);
QPainterPath* QGraphicsPathItem_Path(const QGraphicsPathItem* self);
void QGraphicsPathItem_SetPath(QGraphicsPathItem* self, QPainterPath* path);
QRectF* QGraphicsPathItem_BoundingRect(const QGraphicsPathItem* self);
QPainterPath* QGraphicsPathItem_Shape(const QGraphicsPathItem* self);
bool QGraphicsPathItem_Contains(const QGraphicsPathItem* self, QPointF* point);
void QGraphicsPathItem_Paint(QGraphicsPathItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsPathItem_IsObscuredBy(const QGraphicsPathItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsPathItem_OpaqueArea(const QGraphicsPathItem* self);
int QGraphicsPathItem_Type(const QGraphicsPathItem* self);
bool QGraphicsPathItem_SupportsExtension(const QGraphicsPathItem* self, int extension);
void QGraphicsPathItem_SetExtension(QGraphicsPathItem* self, int extension, QVariant* variant);
QVariant* QGraphicsPathItem_Extension(const QGraphicsPathItem* self, QVariant* variant);
QGraphicsRectItem* QGraphicsRectItem_new();
QGraphicsRectItem* QGraphicsRectItem_new2(QRectF* rect);
QGraphicsRectItem* QGraphicsRectItem_new3(double x, double y, double w, double h);
QGraphicsRectItem* QGraphicsRectItem_new4(QGraphicsItem* parent);
QGraphicsRectItem* QGraphicsRectItem_new5(QRectF* rect, QGraphicsItem* parent);
QGraphicsRectItem* QGraphicsRectItem_new6(double x, double y, double w, double h, QGraphicsItem* parent);
QRectF* QGraphicsRectItem_Rect(const QGraphicsRectItem* self);
void QGraphicsRectItem_SetRect(QGraphicsRectItem* self, QRectF* rect);
void QGraphicsRectItem_SetRect2(QGraphicsRectItem* self, double x, double y, double w, double h);
QRectF* QGraphicsRectItem_BoundingRect(const QGraphicsRectItem* self);
QPainterPath* QGraphicsRectItem_Shape(const QGraphicsRectItem* self);
bool QGraphicsRectItem_Contains(const QGraphicsRectItem* self, QPointF* point);
void QGraphicsRectItem_Paint(QGraphicsRectItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsRectItem_IsObscuredBy(const QGraphicsRectItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsRectItem_OpaqueArea(const QGraphicsRectItem* self);
int QGraphicsRectItem_Type(const QGraphicsRectItem* self);
bool QGraphicsRectItem_SupportsExtension(const QGraphicsRectItem* self, int extension);
void QGraphicsRectItem_SetExtension(QGraphicsRectItem* self, int extension, QVariant* variant);
QVariant* QGraphicsRectItem_Extension(const QGraphicsRectItem* self, QVariant* variant);