src/libqgraphicsitem.bf

	[LinkName("QGraphicsItem_SetExtension")]
	public static extern void QGraphicsItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsItem_Extension")]
	public static extern QVariant QGraphicsItem_Extension(void* c_this, QVariant variant);
	[LinkName("QGraphicsItem_AddToIndex")]
	public static extern void QGraphicsItem_AddToIndex(void* c_this);
	[LinkName("QGraphicsItem_RemoveFromIndex")]
	public static extern void QGraphicsItem_RemoveFromIndex(void* c_this);
	[LinkName("QGraphicsItem_PrepareGeometryChange")]
	public static extern void QGraphicsItem_PrepareGeometryChange(void* c_this);
	[LinkName("QGraphicsItem_SetFlag2")]
	public static extern void QGraphicsItem_SetFlag2(void* c_this, int64 flag, bool enabled);
	[LinkName("QGraphicsItem_SetCacheMode2")]
	public static extern void QGraphicsItem_SetCacheMode2(void* c_this, int64 mode, QSize cacheSize);
	[LinkName("QGraphicsItem_SetFocus1")]
	public static extern void QGraphicsItem_SetFocus1(void* c_this, int64 focusReason);
	[LinkName("QGraphicsItem_EnsureVisible1")]
	public static extern void QGraphicsItem_EnsureVisible1(void* c_this, QRectF rect);
	[LinkName("QGraphicsItem_EnsureVisible22")]
	public static extern void QGraphicsItem_EnsureVisible22(void* c_this, QRectF rect, int32 xmargin);
	[LinkName("QGraphicsItem_EnsureVisible3")]
	public static extern void QGraphicsItem_EnsureVisible3(void* c_this, QRectF rect, int32 xmargin, int32 ymargin);
	[LinkName("QGraphicsItem_EnsureVisible5")]
	public static extern void QGraphicsItem_EnsureVisible5(void* c_this, double x, double y, double w, double h, int32 xmargin);
	[LinkName("QGraphicsItem_EnsureVisible6")]
	public static extern void QGraphicsItem_EnsureVisible6(void* c_this, double x, double y, double w, double h, int32 xmargin, int32 ymargin);
	[LinkName("QGraphicsItem_ItemTransform2")]
	public static extern QTransform QGraphicsItem_ItemTransform2(void* c_this, QGraphicsItem other, bool ok);
	[LinkName("QGraphicsItem_SetTransform2")]
	public static extern void QGraphicsItem_SetTransform2(void* c_this, QTransform matrix, bool combine);
	[LinkName("QGraphicsItem_CollidingItems1")]
	public static extern QGraphicsItem[] QGraphicsItem_CollidingItems1(void* c_this, int64 mode);
	[LinkName("QGraphicsItem_IsObscured1")]
	public static extern bool QGraphicsItem_IsObscured1(void* c_this, QRectF rect);
	[LinkName("QGraphicsItem_Update1")]
	public static extern void QGraphicsItem_Update1(void* c_this, QRectF rect);
	[LinkName("QGraphicsItem_Scroll3")]
	public static extern void QGraphicsItem_Scroll3(void* c_this, double dx, double dy, QRectF rect);
}
public struct QGraphicsObject
{
	[LinkName("QGraphicsObject_new")]
	public static extern void* QGraphicsObject_new();
	[LinkName("QGraphicsObject_new2")]
	public static extern void* QGraphicsObject_new2(QGraphicsItem parent);
	[LinkName("QGraphicsObject_MetaObject")]
	public static extern QMetaObject QGraphicsObject_MetaObject(void* c_this);
	[LinkName("QGraphicsObject_Metacast")]
	public static extern void QGraphicsObject_Metacast(void* c_this, char8[] param1);
	[LinkName("QGraphicsObject_Metacall")]
	public static extern int32 QGraphicsObject_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QGraphicsObject_Tr")]
	public static extern char8[] QGraphicsObject_Tr(char8[] s);
	[LinkName("QGraphicsObject_GrabGesture")]
	public static extern void QGraphicsObject_GrabGesture(void* c_this, int64 typeVal);
	[LinkName("QGraphicsObject_UngrabGesture")]
	public static extern void QGraphicsObject_UngrabGesture(void* c_this, int64 typeVal);
	[LinkName("QGraphicsObject_UpdateMicroFocus")]
	public static extern void QGraphicsObject_UpdateMicroFocus(void* c_this);
	[LinkName("QGraphicsObject_ParentChanged")]
	public static extern void QGraphicsObject_ParentChanged(void* c_this);
	[LinkName("QGraphicsObject_OpacityChanged")]
	public static extern void QGraphicsObject_OpacityChanged(void* c_this);
	[LinkName("QGraphicsObject_VisibleChanged")]
	public static extern void QGraphicsObject_VisibleChanged(void* c_this);
	[LinkName("QGraphicsObject_EnabledChanged")]
	public static extern void QGraphicsObject_EnabledChanged(void* c_this);
	[LinkName("QGraphicsObject_XChanged")]
	public static extern void QGraphicsObject_XChanged(void* c_this);
	[LinkName("QGraphicsObject_YChanged")]
	public static extern void QGraphicsObject_YChanged(void* c_this);
	[LinkName("QGraphicsObject_ZChanged")]
	public static extern void QGraphicsObject_ZChanged(void* c_this);
	[LinkName("QGraphicsObject_RotationChanged")]
	public static extern void QGraphicsObject_RotationChanged(void* c_this);
	[LinkName("QGraphicsObject_ScaleChanged")]
	public static extern void QGraphicsObject_ScaleChanged(void* c_this);
	[LinkName("QGraphicsObject_ChildrenChanged")]
	public static extern void QGraphicsObject_ChildrenChanged(void* c_this);
	[LinkName("QGraphicsObject_WidthChanged")]
	public static extern void QGraphicsObject_WidthChanged(void* c_this);
	[LinkName("QGraphicsObject_HeightChanged")]
	public static extern void QGraphicsObject_HeightChanged(void* c_this);
	[LinkName("QGraphicsObject_Event")]
	public static extern bool QGraphicsObject_Event(void* c_this, QEvent ev);
	[LinkName("QGraphicsObject_Tr2")]
	public static extern char8[] QGraphicsObject_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsObject_Tr3")]
	public static extern char8[] QGraphicsObject_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QGraphicsObject_GrabGesture2")]
	public static extern void QGraphicsObject_GrabGesture2(void* c_this, int64 typeVal, int64 flags);
}
public struct QAbstractGraphicsShapeItem
{
	[LinkName("QAbstractGraphicsShapeItem_new")]
	public static extern void* QAbstractGraphicsShapeItem_new();
	[LinkName("QAbstractGraphicsShapeItem_new2")]
	public static extern void* QAbstractGraphicsShapeItem_new2(QGraphicsItem parent);
	[LinkName("QAbstractGraphicsShapeItem_Pen")]
	public static extern QPen QAbstractGraphicsShapeItem_Pen(void* c_this);
	[LinkName("QAbstractGraphicsShapeItem_SetPen")]
	public static extern void QAbstractGraphicsShapeItem_SetPen(void* c_this, QPen pen);
	[LinkName("QAbstractGraphicsShapeItem_Brush")]
	public static extern QBrush QAbstractGraphicsShapeItem_Brush(void* c_this);
	[LinkName("QAbstractGraphicsShapeItem_SetBrush")]
	public static extern void QAbstractGraphicsShapeItem_SetBrush(void* c_this, QBrush brush);
	[LinkName("QAbstractGraphicsShapeItem_IsObscuredBy")]
	public static extern bool QAbstractGraphicsShapeItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QAbstractGraphicsShapeItem_OpaqueArea")]
	public static extern QPainterPath QAbstractGraphicsShapeItem_OpaqueArea(void* c_this);
}
public struct QGraphicsPathItem
{
	[LinkName("QGraphicsPathItem_new")]
	public static extern void* QGraphicsPathItem_new();
	[LinkName("QGraphicsPathItem_new2")]
	public static extern void* QGraphicsPathItem_new2(QPainterPath path);
	[LinkName("QGraphicsPathItem_new3")]
	public static extern void* QGraphicsPathItem_new3(QGraphicsItem parent);
	[LinkName("QGraphicsPathItem_new4")]
	public static extern void* QGraphicsPathItem_new4(QPainterPath path, QGraphicsItem parent);
	[LinkName("QGraphicsPathItem_Path")]
	public static extern QPainterPath QGraphicsPathItem_Path(void* c_this);
	[LinkName("QGraphicsPathItem_SetPath")]
	public static extern void QGraphicsPathItem_SetPath(void* c_this, QPainterPath path);
	[LinkName("QGraphicsPathItem_BoundingRect")]
	public static extern QRectF QGraphicsPathItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsPathItem_Shape")]
	public static extern QPainterPath QGraphicsPathItem_Shape(void* c_this);
	[LinkName("QGraphicsPathItem_Contains")]
	public static extern bool QGraphicsPathItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsPathItem_Paint")]
	public static extern void QGraphicsPathItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsPathItem_IsObscuredBy")]
	public static extern bool QGraphicsPathItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsPathItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsPathItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsPathItem_Type")]
	public static extern int32 QGraphicsPathItem_Type(void* c_this);
	[LinkName("QGraphicsPathItem_SupportsExtension")]
	public static extern bool QGraphicsPathItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsPathItem_SetExtension")]
	public static extern void QGraphicsPathItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsPathItem_Extension")]
	public static extern QVariant QGraphicsPathItem_Extension(void* c_this, QVariant variant);
}
public struct QGraphicsRectItem
{
	[LinkName("QGraphicsRectItem_new")]
	public static extern void* QGraphicsRectItem_new();
	[LinkName("QGraphicsRectItem_new2")]
	public static extern void* QGraphicsRectItem_new2(QRectF rect);
	[LinkName("QGraphicsRectItem_new3")]
	public static extern void* QGraphicsRectItem_new3(double x, double y, double w, double h);
	[LinkName("QGraphicsRectItem_new4")]
	public static extern void* QGraphicsRectItem_new4(QGraphicsItem parent);
	[LinkName("QGraphicsRectItem_new5")]
	public static extern void* QGraphicsRectItem_new5(QRectF rect, QGraphicsItem parent);
	[LinkName("QGraphicsRectItem_new6")]
	public static extern void* QGraphicsRectItem_new6(double x, double y, double w, double h, QGraphicsItem parent);
	[LinkName("QGraphicsRectItem_Rect")]
	public static extern QRectF QGraphicsRectItem_Rect(void* c_this);
	[LinkName("QGraphicsRectItem_SetRect")]
	public static extern void QGraphicsRectItem_SetRect(void* c_this, QRectF rect);
	[LinkName("QGraphicsRectItem_SetRect2")]
	public static extern void QGraphicsRectItem_SetRect2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsRectItem_BoundingRect")]
	public static extern QRectF QGraphicsRectItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsRectItem_Shape")]
	public static extern QPainterPath QGraphicsRectItem_Shape(void* c_this);
	[LinkName("QGraphicsRectItem_Contains")]
	public static extern bool QGraphicsRectItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsRectItem_Paint")]
	public static extern void QGraphicsRectItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsRectItem_IsObscuredBy")]
	public static extern bool QGraphicsRectItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsRectItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsRectItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsRectItem_Type")]
	public static extern int32 QGraphicsRectItem_Type(void* c_this);
	[LinkName("QGraphicsRectItem_SupportsExtension")]
	public static extern bool QGraphicsRectItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsRectItem_SetExtension")]
	public static extern void QGraphicsRectItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsRectItem_Extension")]
	public static extern QVariant QGraphicsRectItem_Extension(void* c_this, QVariant variant);
}
